# libmonitors

./: CMakeLists.txt  FindXrandr.cmake  Makefile  README.md  cmakelists.txt
src/: export.h  monitors-darwin.c  monitors-internal.c  monitors-internal.h  monitors-linux.c  monitors-test.c  monitors-windows.c  monitors.h
test/: monitor-test.c
