cmake_minimum_required(VERSION 3.1)
project(libmonitors)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
set(CMAKE_BUILD_TYPE Release)

include_directories(source)
add_library(monitors SHARED "src/monitors-internal.c")
set_property(TARGET monitors PROPERTY C_STANDARD 99)

if(UNIX AND NOT APPLE)
  find_package(Xrandr REQUIRED)
  target_sources(monitors PRIVATE "src/monitors-linux.c")
  target_link_libraries(monitors X11)
  target_link_libraries(monitors ${XRANDR_LIBRARIES})
endif()

if(APPLE)
  find_library(CARBON Carbon)
  find_library(IOKIT IOKit)
  find_library(COREVIDEO CoreVideo)
  target_link_libraries(monitors ${CARBON} ${IOKIT} ${COREVIDEO})
  target_sources(monitors PRIVATE "src/monitors-darwin.c")
endif()

if(WIN32)
  find_package(WindowsSDK REQUIRED)
  include_directories(${WINSDK_INCLUDE_DIRS})
  target_compile_options(monitors PRIVATE -D_MSC_VER=1500)
  target_link_libraries(monitors ${WINSDK_LIBRARY_DIRS})
  target_sources(monitors PRIVATE "src/monitors-windows.c")
endif()

add_executable(monitors_test "src/monitors-test.c")
target_link_libraries(monitors_test monitors)
set_property(TARGET monitors_test PROPERTY C_STANDARD 99)

install(TARGETS monitors DESTINATION /usr/lib)
